Pushed actual state for safety

--- a/src/main/resources/languages/lang_en.properties
+++ b/src/main/resources/languages/lang_en.properties
@@ -1,6 +1,7 @@
 generalMatchMessage=<b>Category:</b> %category\n<b>Word to guess:</b>\n%word_state\n<b>Errors:</b> %current_errors/%max_errors
 win_edit_message=\n\n? You won!
 lose_edit_message=\n\n? <b>You lost!</b> The <b>word</b> to guess was: %word
+
 cant_choose_play_mode=Only those who sent the message can choose!
 match_not_multiplayer=Only player message's sender can play!
 match_not_found=This game is already finished or startd before the bot was restarted
@@ -14,4 +15,13 @@ stats_message_sender=\n<b>Your Stats:</b>\n<i>Guessed letters:</i> %guessed_lett
 category=Category: %category
 random_category=Random category
 category_result_description=Click to start a new game
+alert_letter_already_said=This letter was already said
+alert_guessed_letter=You guessed a letter
+alert_wrong_letter=Wrong letter
+alert_match_lose=You lose the match
+alert_match_win=You won the match
+alert_error=There was an error
+start_message=Ciao, usami inline scrivendo in chat @%username e cliccando sul bottone che comparirà sopra!
+supported_languages_button=Supported languages
+
 loading=Loading
