--- a/src/main/resources/languages/lang_it.properties
+++ b/src/main/resources/languages/lang_it.properties
@@ -1,11 +1,12 @@
 generalMatchMessage=<b>Categoria:</b> %category\n<b>Parola da indovinare:</b>\n%word_state\n<b>Errori:</b> %current_errors/%max_errors
 win_edit_message=\n\n<b>Hai vinto!</b>
 lose_edit_message=\n\n<b>Hai perso!</b> La <b>parola</b> da indovinare era: %word
-cant_choose_play_mode=PuÚ scegliere soltato chi ha inviato il messaggio!
-match_not_multiplayer=PuÚ giocare soltato chi ha inviato il messaggio!
-match_not_found=Questa partita Ë gi‡ finita o Ë stata avviata prima che il bot venisse riavviato
-waiting_for_stop=Sto aspettando che le partite in corso per Telegram finiscano.\nL'autore del bot @SuperMarcomen ha richiesto di stoppare il bot per eseguire della manutenzione\nOra non Ë pi˘ possibile cominciare nuove partite.
+cant_choose_play_mode=Pu√≤ scegliere soltato chi ha inviato il messaggio!
+match_not_multiplayer=Pu√≤ giocare soltato chi ha inviato il messaggio!
+match_not_found=Questa partita √® √® stata avviata prima che il bot venisse riavviato
+waiting_for_stop=Sto aspettando che le partite in corso per Telegram finiscano.\nL'autore del bot @SuperMarcomen ha richiesto di stoppare il bot per eseguire della manutenzione\nOra non √® pi√π possibile cominciare nuove partite.
 choose_play_mode=Come vuoi giocare?
+
 stats_title_result=Mostra le statistiche
 stats_description_result=Clicca per mostrare le statistiche
 stats_message_title=<b>Statistiche:</b>\n\n
@@ -14,4 +15,13 @@ stats_message_sender=\n<b>Le tue statistiche:</b>\n<i>Lettere indovinate:</i> %g
 category=Categoria: %category
 random_category=Categoria random
 category_result_description=Clicca per cominciare una nuova partita
+alert_letter_already_said=Lettera gi√† detta
+alert_guessed_letter=Hai indovinato una lettera
+alert_wrong_letter=Lettera sbagliata
+alert_match_lose=Hai perso la partita
+alert_match_win=Hai vinto la partita
+alert_error=C'√® stato un errore
+start_message=Ciao, usami inline scrivendo in chat @%username e cliccando sul bottone che comparir√† sopra!
+supported_languages_button=Lingue supportate
+
 loading=Caricamento
