Added a modified print stream Fixed an important bug that made the bot crash (Thank to t.me/REPLACE_WE) Some minor changes

--- a/src/main/resources/languages/lang_fa.properties
+++ b/src/main/resources/languages/lang_fa.properties
@@ -9,8 +9,8 @@ choose_play_mode=چجوری میخوای بازی کنی؟
 stats_title_result=نمایش آمار بازی
 stats_description_result=برای نمایش آمار بازی کلیک کنید.
 stats_message_title=<b>Stats:</b>\n\n
-stats_message_body=<b>%username:</b>\n<i>Guessed letters:</i> %guessed_letters\n<i>Wrong letters:</i> %wrong_letters\n\n
-stats_message_sender=\n<b>Your Stats:</b>\n<i>Guessed letters:</i> %guessed_letters\n<i>Wrong letters:</i> %wrong_letters
+stats_message_body=<b>%username:</b>\n<i>Guessed letters:</i> %guessed_letters\n<i>Wrong letters:</i> %wrong_letters\n<i>Ratio:</i> %ratio\n\n
+stats_message_sender=\n<b>Your Stats:</b>\n<i>Guessed letters:</i> %guessed_letters\n<i>Wrong letters:</i> %wrong_letters\n<i>Ratio:</i> %ratio
 category=دسته بندی: %category
 random_category=تصادفی
 category_result_description=برای شروع یک بازی جدید کلیک کنید.
