--- a/src/main/resources/languages/lang_it.properties
+++ b/src/main/resources/languages/lang_it.properties
@@ -10,8 +10,9 @@ choose_play_mode=Come vuoi giocare?
 stats_title_result=Mostra le statistiche
 stats_description_result=Clicca per mostrare le statistiche
 stats_message_title=<b>Statistiche:</b>\n\n
-stats_message_body=<b>%username:</b>\n<i>Lettere indovinate:</i> %guessed_letters\n<i>Lettere sbagliate:</i> %wrong_letters\n\n
-stats_message_sender=\n<b>Le tue statistiche:</b>\n<i>Lettere indovinate:</i> %guessed_letters\n<i>Lettere sbagliate:</i> %wrong_letters
+stats_message_body=<b>%username:</b>\n<i>Lettere indovinate:</i> %guessed_letters\n<i>Lettere sbagliate:</i> %wrong_letters\n<i>Ratio:</i> %ratio\n\n
+stats_message_sender=\n<b>Le tue statistiche:</b>\n<i>Lettere indovinate:</i> %guessed_letters\n<i>Lettere sbagliate:</i> %wrong_letters\n<i>Ratio:</i> %ratio
+
 category=Categoria: %category
 random_category=Categoria random
 category_result_description=Clicca per cominciare una nuova partita
