--- a/src/main/resources/languages/lang_en.properties
+++ b/src/main/resources/languages/lang_en.properties
@@ -1,6 +1,6 @@
 generalMatchMessage=<b>Category:</b> %category\n<b>Word to guess:</b>\n%word_state\n<b>Errors:</b> %current_errors/%max_errors
-win_edit_message=\n\n? You won!
-lose_edit_message=\n\n? <b>You lost!</b> The <b>word</b> to guess was: %word
+win_edit_message=\n\nYou won!
+lose_edit_message=\n\n<b>You lost!</b> The <b>word</b> to guess was: %word
 
 cant_choose_play_mode=Only those who sent the message can choose!
 match_not_multiplayer=Only player message's sender can play!
@@ -10,8 +10,8 @@ choose_play_mode=How do you want to play?
 stats_title_result=Show the stats
 stats_description_result=Click to show stats
 stats_message_title=<b>Stats:</b>\n\n
-stats_message_body=<b>%username:</b>\n<i>Guessed letters:</i> %guessed_letters\n<i>Wrong letters:</i> %wrong_letters\n\n
-stats_message_sender=\n<b>Your Stats:</b>\n<i>Guessed letters:</i> %guessed_letters\n<i>Wrong letters:</i> %wrong_letters
+stats_message_body=<b>%username:</b>\n<i>Guessed letters:</i> %guessed_letters\n<i>Wrong letters:</i> %wrong_letters\n<i>Ratio:</i> %ratio\n\n
+stats_message_sender=\n<b>Your Stats:</b>\n<i>Guessed letters:</i> %guessed_letters\n<i>Wrong letters:</i> %\n<i>Ratio:</i> %ratio
 category=Category: %category
 random_category=Random category
 category_result_description=Click to start a new game
