Added a lag alert Fixed a bug that would run an infinite loop if a word contained a space

--- a/src/main/resources/languages/lang_en.properties
+++ b/src/main/resources/languages/lang_en.properties
@@ -1,4 +1,5 @@
-generalMatchMessage=<b>Category:</b> %category\n<b>Word to guess:</b>\n%word_state\n<b>Errors:</b> %current_errors/%max_errors
+general_match_message=<b>Category:</b> %category\n<b>Word to guess:</b>\n%word_state\n<b>Errors:</b> %current_errors/%max_errors
+lag_alert=\n\nSe noti del lag vuol dire che <b>Telegram ti ha messo in floodwait</b>. Prova a cliccare più lentamente.
 win_edit_message=\n\nYou won!
 lose_edit_message=\n\n<b>You lost!</b> The <b>word</b> to guess was: %word
 
