--- a/src/main/resources/languages/lang_fa.properties
+++ b/src/main/resources/languages/lang_fa.properties
@@ -1,4 +1,5 @@
-generalMatchMessage=<b>دسته بندی:</b> %category\n<b>کلمه:</b>\n%word_state\n<b>اشتباهات:</b> %current_errors/%max_errors
+general_match_message=<b>دسته بندی:</b> %category\n<b>کلمه:</b>\n%word_state\n<b>اشتباهات:</b> %current_errors/%max_errors
+lag_alert=\n\n اگر متوجه تأخیر شدید ، بدان معنی است که تلگرام شما را در معرض سیل قرار داده است. سعی کنید آهسته تر کلیک کنید.
 win_edit_message=\n\n? برنده شدی!
 lose_edit_message=\n\n? <b>باختی!</b> <b>کلمه</b> ‌ای که باید حدس میزدی: %word
 cant_choose_play_mode=فقط شروع کننده‌ی بازی میتونه انتخاب کنه!
