--- a/src/main/resources/languages/lang_it.properties
+++ b/src/main/resources/languages/lang_it.properties
@@ -1,4 +1,5 @@
-generalMatchMessage=<b>Categoria:</b> %category\n<b>Parola da indovinare:</b>\n%word_state\n<b>Errori:</b> %current_errors/%max_errors
+general_match_message=<b>Categoria:</b> %category\n<b>Parola da indovinare:</b>\n%word_state\n<b>Errori:</b> %current_errors/%max_errors
+lag_alert=\n\nSe noti del lag vuol dire che <b>Telegram ti ha messo in floodwait</b>. Prova a cliccare più lentamente.
 win_edit_message=\n\n<b>Hai vinto!</b>
 lose_edit_message=\n\n<b>Hai perso!</b> La <b>parola</b> da indovinare era: %word
 cant_choose_play_mode=Può scegliere soltato chi ha inviato il messaggio!
