Added the possibility to start a custom match Added an inline menu and a start menu

--- a/src/main/resources/languages/lang_en.properties
+++ b/src/main/resources/languages/lang_en.properties
@@ -1,15 +1,23 @@
+language=🇬🇧 English
+change_language_button=Change language
+change_language_message=Choose your language
+change_language_done=You have successfully changed your language to english
+show_statistics=Show the statistics
+menu_button=Open the menu
+menu_message=Here is the menu, choose what to do. If you want to play a new game, type @HangmanBot and choose a category
+menu_back=Back
+custom_match=Start a new match with the word: %word
+custom_match_description=Start a match for the others with the word you have choose
+cant_play_your_custom_match=You can't play your own custom match
 general_match_message=<b>Category:</b> %category\n<b>Word to guess:</b>\n%word_state\n<b>Errors:</b> %current_errors/%max_errors
-lag_alert=\n\nSe noti del lag vuol dire che <b>Telegram ti ha messo in floodwait</b>. Prova a cliccare più lentamente.
+lag_alert=\n\nIf you notice lag, it means that <b> Telegram has put you in floodwait </b>. Try to click more slowly.
 win_edit_message=\n\nYou won!
 lose_edit_message=\n\n<b>You lost!</b> The <b>word</b> to guess was: %word
-
 cant_choose_play_mode=Only those who sent the message can choose!
 match_not_multiplayer=Only player message's sender can play!
 match_not_found=This game is already finished or startd before the bot was restarted
 waiting_for_stop=I'm waiting for the games in progress for Telegram to end.\nThe author of the bot @SuperMarcomen has requested to stop the bot to perform maintenance\nNow it's no longer possible to start new games.
 choose_play_mode=How do you want to play?
-stats_title_result=Show the stats
-stats_description_result=Click to show stats
 stats_message_title=<b>Stats:</b>\n\n
 stats_message_body=<b>%username:</b>\n<i>Guessed letters:</i> %guessed_letters\n<i>Wrong letters:</i> %wrong_letters\n<i>Ratio:</i> %ratio\n\n
 stats_message_sender=\n<b>Your Stats:</b>\n<i>Guessed letters:</i> %guessed_letters\n<i>Wrong letters:</i> %\n<i>Ratio:</i> %ratio
@@ -22,7 +30,4 @@ alert_wrong_letter=Wrong letter
 alert_match_lose=You lose the match
 alert_match_win=You won the match
 alert_error=There was an error
-start_message=Ciao, usami inline scrivendo in chat @%username e cliccando sul bottone che comparirà sopra!
-supported_languages_button=Supported languages
-
 loading=Loading
