--- a/src/main/resources/languages/lang_fa.properties
+++ b/src/main/resources/languages/lang_fa.properties
@@ -1,5 +1,16 @@
+language=🇮🇷 فارسی
+change_language_button=تغییر زبان
+change_language_done=زبان شما به فارسی تغییر داده شد.
+change_language_message=زبان خود را انتخاب کنید
+show_statistics=نمایش آمار بازی
+menu_button=باز کردن فهرست
+menu_message=فهرست: چیکار میخوای بکنی؟ برای شروع یه بازی جدید @HangmanBot رو تایپ کن و یه دسته بندی رو انتخاب کن.
+menu_back=بازگشت
+custom_match=شروع یک بازی جدید با کلمه‌ی: %word
+custom_match_description=شروع یک بازی برای دیگران، با کلمه ای که شما انتخاب کرده اید.
+cant_play_your_custom_match=You can't play your own custom match
 general_match_message=<b>دسته بندی:</b> %category\n<b>کلمه:</b>\n%word_state\n<b>اشتباهات:</b> %current_errors/%max_errors
-lag_alert=\n\n اگر متوجه تأخیر شدید ، بدان معنی است که تلگرام شما را در معرض سیل قرار داده است. سعی کنید آهسته تر کلیک کنید.
+lag_alert=\n\n اگر متوجه تاخیر شدید به این علت است که <b>تلگرام برای جلوگیری از فلود شمارا نادیده میگیرد.</b> لطفا آرامتر کلیک کنید.
 win_edit_message=\n\n? برنده شدی!
 lose_edit_message=\n\n? <b>باختی!</b> <b>کلمه</b> ‌ای که باید حدس میزدی: %word
 cant_choose_play_mode=فقط شروع کننده‌ی بازی میتونه انتخاب کنه!
@@ -7,8 +18,6 @@ match_not_multiplayer=فقط سازنده بازی میتونه بازی کنه!
 match_not_found=این بازی تمام شده و یا منقضی شده.
 waiting_for_stop=به علت تعمیرات نمیتوانید بازی جدیدی شروع کنید. \n  @SuperMarcomen سازنده ربات قصد ایجاد تغییرات دارد.
 choose_play_mode=چجوری میخوای بازی کنی؟
-stats_title_result=نمایش آمار بازی
-stats_description_result=برای نمایش آمار بازی کلیک کنید.
 stats_message_title=<b>Stats:</b>\n\n
 stats_message_body=<b>%username:</b>\n<i>Guessed letters:</i> %guessed_letters\n<i>Wrong letters:</i> %wrong_letters\n<i>Ratio:</i> %ratio\n\n
 stats_message_sender=\n<b>Your Stats:</b>\n<i>Guessed letters:</i> %guessed_letters\n<i>Wrong letters:</i> %wrong_letters\n<i>Ratio:</i> %ratio
@@ -21,6 +30,4 @@ alert_wrong_letter=Wrong letter
 alert_match_lose=You lose the match
 alert_match_win=You won the match
 alert_error=There was an error
-start_message=Ciao, usami inline scrivendo in chat @%username e cliccando sul bottone che comparirà sopra!
-supported_languages_button=Supported languages
 loading=Loading
