--- a/src/main/resources/languages/lang_it.properties
+++ b/src/main/resources/languages/lang_it.properties
@@ -1,3 +1,14 @@
+language=🇮🇹 Italiano
+change_language_button=Cambia lingua
+change_language_message=Seleziona la tua lingua
+change_language_done=Hai impostato con successo la lingua italiana
+show_statistics=Mostra le statistiche
+menu_button=Apri il menù
+menu_message=Ecco il menù, scegli cosa fare. Se vuoi giocare una nuova partita scrivi @HangmanBot e scegli una categoria
+menu_back=Indietro
+custom_match=Comincia una parita con la parola: %word
+custom_match_description=Comincia una partita  per gli altri con la parola scelta da te
+cant_play_your_custom_match=Non puoi giocare il tuo stesso match custom
 general_match_message=<b>Categoria:</b> %category\n<b>Parola da indovinare:</b>\n%word_state\n<b>Errori:</b> %current_errors/%max_errors
 lag_alert=\n\nSe noti del lag vuol dire che <b>Telegram ti ha messo in floodwait</b>. Prova a cliccare più lentamente.
 win_edit_message=\n\n<b>Hai vinto!</b>
@@ -7,13 +18,9 @@ match_not_multiplayer=Può giocare soltato chi ha inviato il messaggio!
 match_not_found=Questa partita è è stata avviata prima che il bot venisse riavviato
 waiting_for_stop=Sto aspettando che le partite in corso per Telegram finiscano.\nL'autore del bot @SuperMarcomen ha richiesto di stoppare il bot per eseguire della manutenzione\nOra non è più possibile cominciare nuove partite.
 choose_play_mode=Come vuoi giocare?
-
-stats_title_result=Mostra le statistiche
-stats_description_result=Clicca per mostrare le statistiche
 stats_message_title=<b>Statistiche:</b>\n\n
 stats_message_body=<b>%username:</b>\n<i>Lettere indovinate:</i> %guessed_letters\n<i>Lettere sbagliate:</i> %wrong_letters\n<i>Ratio:</i> %ratio\n\n
 stats_message_sender=\n<b>Le tue statistiche:</b>\n<i>Lettere indovinate:</i> %guessed_letters\n<i>Lettere sbagliate:</i> %wrong_letters\n<i>Ratio:</i> %ratio
-
 category=Categoria: %category
 random_category=Categoria random
 category_result_description=Clicca per cominciare una nuova partita
@@ -23,7 +30,4 @@ alert_wrong_letter=Lettera sbagliata
 alert_match_lose=Hai perso la partita
 alert_match_win=Hai vinto la partita
 alert_error=C'è stato un errore
-start_message=Ciao, usami inline scrivendo in chat @%username e cliccando sul bottone che comparirà sopra!
-supported_languages_button=Lingue supportate
-
 loading=Caricamento
