Added a description for the menu button Fixed an error in an english message

--- a/src/main/resources/languages/lang_en.properties
+++ b/src/main/resources/languages/lang_en.properties
@@ -4,6 +4,7 @@ change_language_message=Choose your language
 change_language_done=You have successfully changed your language to english
 show_statistics=Show the statistics
 menu_button=Open the menu
+menu_button_description=Change the language/Show the stats
 menu_message=Here is the menu, choose what to do. If you want to play a new game, type @HangmanBot and choose a category
 menu_back=Back
 custom_match=Start a new match with the word: %word
@@ -20,7 +21,7 @@ waiting_for_stop=I'm waiting for the games in progress for Telegram to end.\nThe
 choose_play_mode=How do you want to play?
 stats_message_title=<b>Stats:</b>\n\n
 stats_message_body=<b>%username:</b>\n<i>Guessed letters:</i> %guessed_letters\n<i>Wrong letters:</i> %wrong_letters\n<i>Ratio:</i> %ratio\n\n
-stats_message_sender=\n<b>Your Stats:</b>\n<i>Guessed letters:</i> %guessed_letters\n<i>Wrong letters:</i> %\n<i>Ratio:</i> %ratio
+stats_message_sender=\n<b>Your Stats:</b>\n<i>Guessed letters:</i> %guessed_letters\n<i>Wrong letters:</i> %wrong_letters\n<i>Ratio:</i> %ratio
 category=Category: %category
 random_category=Random category
 category_result_description=Click to start a new game
