--- a/src/main/resources/languages/lang_fa.properties
+++ b/src/main/resources/languages/lang_fa.properties
@@ -5,6 +5,7 @@ change_language_message=زبان خود را انتخاب کنید
 show_statistics=نمایش آمار بازی
 menu_button=باز کردن فهرست
 menu_message=فهرست: چیکار میخوای بکنی؟ برای شروع یه بازی جدید @HangmanBot رو تایپ کن و یه دسته بندی رو انتخاب کن.
+menu_button_description=تغییر زبان / نمایش آمار
 menu_back=بازگشت
 custom_match=شروع یک بازی جدید با کلمه‌ی: %word
 custom_match_description=شروع یک بازی برای دیگران، با کلمه ای که شما انتخاب کرده اید.
