--- a/src/main/resources/languages/lang_it.properties
+++ b/src/main/resources/languages/lang_it.properties
@@ -5,6 +5,7 @@ change_language_done=Hai impostato con successo la lingua italiana
 show_statistics=Mostra le statistiche
 menu_button=Apri il menù
 menu_message=Ecco il menù, scegli cosa fare. Se vuoi giocare una nuova partita scrivi @HangmanBot e scegli una categoria
+menu_button_description=Cambia la lingua/Mostra le statistiche
 menu_back=Indietro
 custom_match=Comincia una parita con la parola: %word
 custom_match_description=Comincia una partita  per gli altri con la parola scelta da te
